2025-01-12  Saruman the White  <eker@eker10>

	* CUI_Symbol.hh (class CUI_Symbol): updated decls for
	eqRewriteStandardStrategy(), eqRewriteComplexStrategy()

	* CUI_Symbol.cc (CUI_Symbol::eqRewriteStandardStrategy): take
	Symbol* arugment
	(CUI_Symbol::eqRewriteComplexStrategy): take Symbol* argument

2025-01-11  Saruman the White  <eker@eker10>

	* CUI_Symbol.cc (CUI_Symbol::CUI_Symbol): call setEqRewrite()

	* CUI_Symbol.hh (class CUI_Symbol): added decls for
	eqRewriteStandardStrategy(), eqRewriteComplexStrategy()

	* CUI_Symbol.cc (CUI_Symbol::eqRewriteStandardStrategy): added
	(CUI_Symbol::eqRewriteComplexStrategy): added

2024-03-05  Steven Eker  <eker@pup>

	* CUI_Term.cc (CUI_Term::arguments): made const

	* CUI_Term.hh (class CUI_Term): made arguments() const

===================================Maude158===========================================

2024-01-16  Steven Eker  <eker@pup>

	* CUI_Symbol.cc (CUI_Symbol::stackArguments): handle
	respectUnstackable argument

	* CUI_Symbol.hh (class CUI_Symbol): updated decl for stackArguments()

===================================Maude156===========================================

2023-07-24  Steven Eker  <eker@pup>

	* CUI_Symbol.cc (CUI_Symbol::determineGround): added

	* CUI_Symbol.hh (class CUI_Symbol): added decl for determineGround()

===================================Maude151===========================================

2020-12-11  Steven Eker  <eker2@eker10>

	* CUI_DagNode.cc (CUI_DagNode::instantiate2): take and pass
	maintainInvariants flag; only normalize and compute sort for
	ground dag if maintainInvariants == true
	(CUI_DagNode::instantiateWithReplacement): pass maintainInvariants
	= false to instantiate()
	(CUI_DagNode::instantiateWithCopies2): pass maintainInvariants =
	false to instantiate()

	* CUI_DagNode.hh (class CUI_DagNode): updated decl for
	instantiate2()

===================================Maude132===========================================

2020-09-28  Steven Eker  <eker2@eker10>
