@@ -93,6 +93,12 @@ public:
   bool rightId() const;
   bool idem() const;
 
+protected:
+  //
+  //	This is provided for derived classes to call from their own EqRewriter functions.
+  //
+  bool normalizeAndTryEquations(DagNode* subject, RewritingContext& context);
+
 private:
   bool memoStrategy(MemoTable::SourceSet& from, DagNode* subject, RewritingContext& context);
   static bool eqRewriteStandardStrategy(Symbol* symbol, DagNode* subject, RewritingContext& context);
@@ -123,6 +129,23 @@ inline bool
 CUI_Symbol::idem() const
 {
   return axioms & IDEM;
+}
+
+#include "CUI_DagNode.hh"
+
+inline bool
+CUI_Symbol::normalizeAndTryEquations(DagNode* subject, RewritingContext& context)
+{
+  //
+  //	We assume caller has already reduced the arguments, and failed to
+  //	execute some special semantics. This a backstop that just normalizes
+  //	and tries the user's equations.
+  //
+  Assert(this == subject->symbol(), "bad symbol");
+  CUI_DagNode* d = static_cast<CUI_DagNode*>(subject);
+  if (d->normalizeAtTop())
+    return false;
+  return !equationFree() && applyReplace(d, context);
 }
 
 #endif
